# CPER

./: CryproPupsik.sln  LICENSE  README.md
CryproPupsik/: CMakeLists.txt  CryproPupsik.vcxproj  CryproPupsik.vcxproj.filters  STYLEdrawMainMenu.h  Source.cpp  calculateProfit.h  checkConnectionToTheInternet.h  connectionUpdater.h  displayInformation.h  getExchangeRates.h  performCalculation.h  prufInternetConnection.h  setupActivation.h  smallMenu.h  telegramClienUpdater.h  textVariations.h  widgetUpdater.h
CryproPupsik/Debug/: CryproPupsik.exe.recipe  CryproPupsik.ilk  CryproPupsik.vcxproj.FileListAbsolute.txt  vc143.idb
CryproPupsik/Debug/CryproPupsik.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CryproPupsik.lastbuildstate  CryproPupsik.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CryproPupsik/Release/: CryproPupsik.exe.recipe  CryproPupsik.iobj  CryproPupsik.ipdb
CryproPupsik/Release/CryproPupsik.tlog/: CL.command.1.tlog  CL.write.1.tlog  CryproPupsik.lastbuildstate  CryproPupsik.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CryproPupsik/x64/Debug/: CryproPupsik.exe.recipe  CryproPupsik.vcxproj.FileListAbsolute.txt  source.obj.enc  vc143.idb
CryproPupsik/x64/Debug/CryproPupsik.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CryproPupsik.lastbuildstate  CryproPupsik.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CryproPupsik/x64/Release/: CryproPupsik.exe.recipe  CryproPupsik.vcxproj.FileListAbsolute.txt
(+8 files in other folders)
